--- a/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
+++ b/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
@@ -31,14 +32,27 @@
                 <Slider maxWidth="400.0" minWidth="400.0" prefWidth="400.0" />
             </children>
         </VBox>
-        <AnchorPane prefHeight="240.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
-            <ImageView fx:id="contentImage" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="15.0">
+        <GridPane alignment="CENTER" prefHeight="240.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
             <GridPane.margin>
                 <Insets />
             </GridPane.margin>
-            </ImageView>
-        </AnchorPane>
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: lightgreen;" text="+" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="200.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="40.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <ImageView fx:id="contentImage" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0">
+                    <GridPane.margin>
+                        <Insets left="25.0" top="30.0" />
+                    </GridPane.margin>
+                </ImageView>
+            </children>
+        </GridPane>
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: limegreen;" text="+" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets left="24.0" />
          </GridPane.margin>
