--- a/desktop-app/src/main/resources/Layouts/LoginView.fxml
+++ b/desktop-app/src/main/resources/Layouts/LoginView.fxml
@@ -8,31 +8,26 @@
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.LoginViewImpl">
+<VBox alignment="CENTER" stylesheets="@../stylesheets/loginViewStyle.css"
+      styleClass="canvas" prefHeight="600.00" prefWidth="400.00" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.LoginViewImpl">
    <children>
-      <TextField id="loginField" fx:id="loginField" alignment="CENTER" opacity="0.75" prefWidth="240.0" promptText="login" VBox.vgrow="NEVER">
-         <effect>
-            <InnerShadow />
-         </effect>
-         <VBox.margin>
-            <Insets top="20.0" />
-         </VBox.margin>
-      </TextField>
-      <PasswordField id="passwordField" fx:id="passwordField" alignment="CENTER" opacity="0.75" promptText="password">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <effect>
-            <InnerShadow />
-         </effect>
-      </PasswordField>
-      <Button id="loginButton" fx:id="loginButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onLogin" opacity="0.75" prefWidth="250.0" text="SIGN IN" textOverrun="CENTER_ELLIPSIS" />
-      <Button fx:id="registerButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onMoveToRegister" prefWidth="150.0" text="SIGN UP" textAlignment="CENTER">
-         <VBox.margin>
-            <Insets top="10.0" />
-         </VBox.margin>
-      </Button>
-      <Label fx:id="warning" text="User data is wrong!" textFill="#e11b1b" />
+      <VBox alignment="CENTER" styleClass="form" spacing="10.0">
+         <children>
+            <TextField styleClass="text-field" fx:id="loginField" alignment="CENTER" opacity="0.75" prefWidth="400.0" maxWidth="400.0" promptText="login" VBox.vgrow="NEVER">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </TextField>
+            <PasswordField styleClass="text-field" fx:id="passwordField" prefWidth="400.0" maxWidth="400.0" alignment="CENTER" opacity="0.75" promptText="password" />
+            <Button styleClass="login-button" fx:id="loginButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onLogin" opacity="0.75" prefWidth="250.0" text="SIGN IN" textOverrun="CENTER_ELLIPSIS" />
+            <Button fx:id="registerButton" styleClass="register-button" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onMoveToRegister" prefWidth="150.0" text="SIGN UP" textAlignment="CENTER">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Button>
+            <Label fx:id="warning" text="User data is wrong!" textFill="#e11b1b" />
+         </children>
+      </VBox>
    </children>
    <padding>
       <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
